<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserListingActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchplayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Button
                android:id="@+id/searchbut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Search" />
        </LinearLayout>

        <Spinner
            android:id="@+id/rankingId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="7dp" />

        <ListView
            android:id="@+id/playerlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/login_screen"
        android:layout_alignBottom="@+id/login_screen"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@android:drawable/ic_menu_camera" />
</RelativeLayout>