<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:text="Rank"
        android:textSize="20sp"></TextView>

    <TextView
        android:id="@+id/usernameContent"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:padding="10dp"
        android:text="User"
        android:textSize="20sp"></TextView>


</LinearLayout>


