...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Points"
                android:textSize="20sp">
            </TextView>
...
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="Add a new comment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_admin_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="16dp"
            android:contentDescription="Delete current qr code"
            android:visibility="gone"
...
