...
                android:textSize="17dp"
                android:layout_margin="5dp"
                android:text="@string/comments">
            </TextView>

            <ListView
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@android:drawable/ic_input_add"
            android:contentDescription="@string/add_a_new_comment" />
...
